Google guava is here to stay.